# ESP32-Insect-CVML-Project

./: LICENSE  README.md  TIMELINE.md
esp32-device/: .gitignore  CMakeLists.txt  LICENSE  README.md  example_config.json  partitions.csv
esp32-device/components/ble_config/: CMakeLists.txt  ble_config.c  ble_config.h  ble_config_server.c  ble_config_server.h  ble_config_utils.c  ble_config_utils.h  ble_notify.c  ble_notify.h
esp32-device/components/cnn_inference/: lettercnn.espdl
esp32-device/components/config_repo/: CMakeLists.txt  config_repo.c  config_repo.h  nvs_util.c  nvs_util.h
esp32-device/components/provision_serial/: CMakeLists.txt  provision_serial.c
esp32-device/components/provision_serial/include/: provision_serial.h
esp32-device/components/provisioning/: CMakeLists.txt  Kconfig  provisioning_service.c  provisioning_service.h
esp32-device/main/: CMakeLists.txt  camera.c  camera.h  camera_pins.h  cv.c  cv.h  hello_world_main.c  helpers.h  idf_component.yml
esp32-device/main/tasks/: take_images.c  take_images.h  write_sd.c  write_sd.h
provisioners/: serialy.py
provisioners/gui_provisioner/: api_manager.py  config.py  gui_components.py  main.py  serial_manager.py  serialy_gui.py
training_pipeline/: train.py
ux/src/: appFetch.js  main.jsx
ux/src/pages/dashboard/: CreateDeviceForm.jsx  DashboardPage.jsx
webapi/: pom.xml
webapi/src/main/java/com/jden/espylah/webapi/: WebapiApplication.java
webapi/src/main/resources/: application.properties
webapi/src/main/resources/demo/: h2-init-demo.sql
(+11 files in other folders)
